# docs/swagger.json
@@ -34,6 +34,12 @@
                         "schema": {
                             "$ref": "#/definitions/models.ResponseHTTP"
                         }
+                    },
+                    "400": {
+                        "description": "Bad Request",
+                        "schema": {
+                            "$ref": "#/definitions/models.ResponseHTTP"
+                        }
                     }
                 }
             }
@@ -55,6 +61,9 @@
         "models.ResponseHTTP": {
             "type": "object",
             "properties": {
+                "code": {
+                    "type": "integer"
+                },
                 "data": {},
                 "message": {
                     "type": "string"
